--- a/app/src/main/res/layout/activity_work_order_manage.xml
+++ b/app/src/main/res/layout/activity_work_order_manage.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:tools="http://schemas.android.com/tools"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		tools:context=".workordermanage.view.WorkOrderManage"
-		android:orientation="vertical">
-	<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="50dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".workordermanage.view.WorkOrderManage"
+        android:orientation="vertical"
+        android:background="#ffffff">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
 
-	>
-		<ImageView
-				android:layout_width="50dp"
-				android:layout_height="50dp"
-				android:src="@drawable/ic_back"
-				android:padding="10dp"
-				android:contentDescription="@string/back"/>
+    >
+        <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_back"
+                android:padding="10dp"
+                android:contentDescription="@string/back"/>
 
-		<TextView android:layout_width="match_parent" android:layout_height="match_parent"
-		          android:text="@string/order_manage"
-		          android:layout_gravity="center"
-		          android:gravity="center"
-		          android:textSize="14sp"
-		          android:layout_marginEnd="50dp" android:layout_marginRight="50dp"/>
-	</LinearLayout>
+        <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+                  android:text="@string/order_manage"
+                  android:layout_gravity="center"
+                  android:gravity="center"
+                  android:textSize="14sp"
+                  android:layout_marginEnd="50dp" android:layout_marginRight="50dp"/>
+    </LinearLayout>
+    <LinearLayout android:layout_width="match_parent" android:layout_height="50dp"
+                  android:background="@drawable/corner_gray_25radius"
+                  android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
 
-	<ListView android:layout_width="match_parent" android:layout_height="match_parent"
-	android:id="@+id/orderManage_list">
-	</ListView>
+    </LinearLayout>
+    <ListView android:layout_width="match_parent" android:layout_height="match_parent"
+              android:id="@+id/orderManage_list">
+    </ListView>
 
 
 </LinearLayout>
