--- a/app/src/main/res/layout/activity_work_order_manage.xml
+++ b/app/src/main/res/layout/activity_work_order_manage.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".workordermanage.view.WorkOrderManage"
         android:orientation="vertical"
         android:background="#ffffff">
@@ -12,6 +12,7 @@
                   android:orientation="vertical" android:paddingBottom="10dp"
                   android:background="#5CACEE">
         <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="50dp">
             <ImageView
@@ -21,29 +22,72 @@
                     android:padding="10dp"
                     android:contentDescription="@string/back"/>
 
-            <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+            <TextView android:layout_width="0dp" android:layout_weight="1" android:layout_height="match_parent"
                       android:text="@string/order_manage"
                       android:layout_gravity="center"
                       android:gravity="center"
                       android:textSize="14sp"
                       android:textColor="#ffffff"
-                      android:layout_marginEnd="50dp" android:layout_marginRight="50dp"/>
+                      android:layout_marginRight="50dp" android:layout_marginEnd="50dp"/>
+
+
         </LinearLayout>
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                      android:background="@drawable/corner_white_25radius"
-                      android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
-                      android:paddingLeft="10dp" android:paddingRight="10dp"
-                      android:paddingTop="2dp" android:paddingBottom="2dp">
+        <LinearLayout android:layout_width="match_parent" android:layout_height="45dp"
+                      android:orientation="horizontal"
+                      android:paddingLeft="5dp"
+                      android:paddingRight="5dp"
+                      android:gravity="center_vertical"
+                      android:layout_gravity="center_vertical"
+
+        >
+            <org.angmarch.views.NiceSpinner
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:gravity="center_vertical"
+                    android:id="@+id/orderManage_searchType"
+                    android:layout_marginRight="5dp" android:layout_marginEnd="5dp"/>
 
 
+            <EditText
+                    android:inputType="text"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical" android:layout_width="0dp" android:layout_weight="1"
+                    android:layout_height="45dp"
+                    android:background="#ffffff"
+                    android:paddingLeft="10dp" android:paddingRight="10dp"
+                    android:lineHeight="40dp"
+                    android:hint="请输入"
+                    android:maxLines="1"
+                    android:paddingEnd="10dp" android:paddingStart="10dp"/>
+
+            <ImageView
+                    android:layout_width="wrap_content" android:layout_height="match_parent"
+                    android:src="@drawable/ic_search"
+                    android:background="#ffffff"
+                    android:paddingRight="10dp"
+                    android:paddingEnd="10dp" tools:ignore="RtlSymmetry"/>
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <ListView android:layout_width="match_parent" android:layout_height="match_parent"
+    <ListView android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"
               android:id="@+id/orderManage_list">
     </ListView>
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="派单"
+            app:bootstrapBrand="primary"
+            app:bootstrapSize="lg"
+            app:buttonMode="regular"
+            app:showOutline="false"
+            app:roundedCorners="true"
+    />
 
 
 </LinearLayout>
