--- a/app/src/main/res/layout/activity_service_manage.xml
+++ b/app/src/main/res/layout/activity_service_manage.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".servicemanage.view.ServiceManage"
+        android:descendantFocusability="blocksDescendants"
         android:orientation="vertical">
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:orientation="vertical"
@@ -14,6 +15,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp">
             <ImageView
+                    android:id="@+id/serviceManage_back"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:src="@drawable/ic_back"
@@ -33,4 +35,11 @@
 
 
     </LinearLayout>
+
+    <ListView
+            android:id="@+id/serviceManage_list"
+
+            android:layout_width="match_parent" android:layout_height="match_parent">
+
+    </ListView>
 </LinearLayout>
