--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -4,6 +4,7 @@
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:background="@drawable/corner_white_25radius"
+              android:descendantFocusability="blocksDescendants"
               android:layout_margin="5dp"
               android:paddingTop="15dp" android:paddingBottom="15dp">
 
