--- a/app/src/main/res/layout/activity_service_manage.xml
+++ b/app/src/main/res/layout/activity_service_manage.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".servicemanage.view.ServiceManage"
         android:descendantFocusability="blocksDescendants"
         android:orientation="vertical">
@@ -11,6 +11,8 @@
                   android:orientation="vertical"
                   android:background="#5CACEE">
         <LinearLayout
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="50dp">
@@ -28,8 +30,16 @@
                       android:gravity="center"
                       android:textSize="16sp"
                       android:textColor="#ffffff"
-                      android:layout_marginRight="50dp" android:layout_marginEnd="50dp"/>
-
+                       />
+            <ImageView
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    android:id="@+id/serviceManage_type"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_category"
+                    android:padding="10dp"
+                    android:contentDescription="@string/back"/>
 
         </LinearLayout>
 
@@ -38,8 +48,24 @@
 
     <ListView
             android:id="@+id/serviceManage_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
-            android:layout_width="match_parent" android:layout_height="match_parent">
+
 
     </ListView>
+    <com.beardedhen.androidbootstrap.BootstrapButton
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="新增"
+            app:bootstrapBrand="primary"
+            app:bootstrapSize="lg"
+            app:buttonMode="regular"
+            app:showOutline="false"
+            app:roundedCorners="true"
+    />
 </LinearLayout>
