--- a/app/src/main/res/layout/activity_organization.xml
+++ b/app/src/main/res/layout/activity_organization.xml
@@ -1,9 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".organizationmanage.ui.OrganizationActivity">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        style="@style/AppTheme"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@color/theme"
+        app:navigationIcon="@drawable/ic_back"
+        app:title="@string/organization_manage"
+        app:titleTextColor="@color/white" />
+
+
+    <ListView
+        android:id="@+id/organization_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="55dp"
+         />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="30dp"
+        app:fabSize="normal"
+        app:elevation="5dp"
+        android:backgroundTint="@color/theme"
+        app:borderWidth="0dp"
+        android:src="@drawable/ic_add_black_24dp"
+        app:layout_anchor="@id/organization_content"
+        app:layout_anchorGravity="bottom|right" />
+
+</android.support.design.widget.CoordinatorLayout>
