--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="white">#ffffff</color>
+    <color name="theme">#5CACEE</color>
+    <color name="red">#DC143C</color>
+    <color name="orange">#FFA500</color>
+    <color name="grey">#AA808080</color>
 </resources>
