--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="searchViewStyle">@style/CustomSearchViewStyle</item>
     </style>
-
-
+    <style name="CustomSearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <!-- Gets rid of the search icon -->
+        <!--<item name="searchIcon">@drawable/ic_search</item>-->
+        <!-- Gets rid of the "underline" in the text -->
+        <!--<item name="queryBackground">@color/white</item>-->
+        <!-- Gets rid of the search icon when the SearchView is expanded -->
+    </style>
 </resources>
