--- a/app/src/main/res/layout/activity_work_order_manage.xml
+++ b/app/src/main/res/layout/activity_work_order_manage.xml
@@ -17,6 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp">
             <ImageView
+                    android:id="@+id/orderManage_back"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
                     android:layout_width="50dp"
