--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -9,6 +9,8 @@
               android:paddingTop="15dp" android:paddingBottom="15dp">
 
     <android.support.v7.widget.AppCompatCheckBox
+            android:focusable="false"
+            android:id="@+id/order_item_checkbox"
             android:layout_marginLeft="20dp"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
@@ -30,6 +32,7 @@
                       android:text="工单号码"/>
             <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                       android:gravity="end"
+                      android:id="@+id/order_item_id"
                       android:textSize="14sp"
                       android:layout_marginLeft="20dp"
                       android:text="A10000000"/>
