--- a/app/src/main/res/layout/organization_item_layout.xml
+++ b/app/src/main/res/layout/organization_item_layout.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="10dp">
 
     <LinearLayout
         android:id="@+id/content"
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/org_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="17sp"
@@ -75,7 +76,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_weight="1">
+                android:layout_weight="1.2">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -243,18 +244,25 @@
         </LinearLayout>
     </LinearLayout>
 
-    <view
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
+        android:layout_height="1px"
         android:layout_marginTop="8dp"
-        android:background="@color/grey" />
+        android:background="#AAD3d3d3" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="end">
-
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:id="@+id/btn_upload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="@string/upload"
+            app:bootstrapBrand="success"
+            app:roundedCorners="true" />
         <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/btn_edit"
             android:layout_width="wrap_content"
