--- a/app/src/main/res/layout/activity_organization_edit.xml
+++ b/app/src/main/res/layout/activity_organization_edit.xml
@@ -286,7 +286,9 @@
                     android:id="@+id/org_stars"
                     style="?android:attr/ratingBarStyle"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:stepSize="1"/>
             </LinearLayout>
 
             <LinearLayout
